@@ -10,6 +10,10 @@ package com.powsybl.security.converter;
 import com.powsybl.commons.test.AbstractSerDeTest;
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.contingency.*;
+import com.powsybl.contingency.strategy.ConditionalActions;
+import com.powsybl.contingency.strategy.OperatorStrategy;
+import com.powsybl.contingency.strategy.condition.*;
+import com.powsybl.contingency.violations.*;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.iidm.network.TerminalNumber;
 import com.powsybl.iidm.network.ThreeSides;
@@ -17,14 +21,11 @@ import com.powsybl.iidm.network.TwoSides;
 import com.powsybl.iidm.network.test.EurostagTutorialExample1Factory;
 import com.powsybl.loadflow.LoadFlowResult;
 import com.powsybl.security.*;
-import com.powsybl.security.condition.*;
 import com.powsybl.security.extensions.ActivePowerExtension;
 import com.powsybl.security.extensions.CurrentExtension;
 import com.powsybl.security.extensions.VoltageExtension;
 import com.powsybl.security.json.SecurityAnalysisResultDeserializer;
-import com.powsybl.security.strategy.OperatorStrategy;
 import com.powsybl.security.results.*;
-import com.powsybl.security.strategy.ConditionalActions;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -50,10 +51,10 @@ class ExporterTest extends AbstractSerDeTest {
 
     private static SecurityAnalysisResult create() {
         // Create a LimitViolation(CURRENT) to ensure backward compatibility works
-        LimitViolation violation1 = new LimitViolation("NHV1_NHV2_1", LimitViolationType.CURRENT, null, Integer.MAX_VALUE, 100, 0.95f, 110.0, TwoSides.ONE);
+        LimitViolation violation1 = new LimitViolation("NHV1_NHV2_1", null, "activated_1_1", LimitViolationType.CURRENT, null, Integer.MAX_VALUE, 100, 0.95f, 110.0, ThreeSides.ONE, null);
         violation1.addExtension(ActivePowerExtension.class, new ActivePowerExtension(220.0));
 
-        LimitViolation violation2 = new LimitViolation("NHV1_NHV2_2", LimitViolationType.CURRENT, "20'", 1200, 100, 1.0f, 110.0, TwoSides.TWO);
+        LimitViolation violation2 = new LimitViolation("NHV1_NHV2_2", null, "activated_2_1", LimitViolationType.CURRENT, "20'", 1200, 100, 1.0f, 110.0, ThreeSides.TWO, null);
         violation2.addExtension(ActivePowerExtension.class, new ActivePowerExtension(220.0, 230.0));
         violation2.addExtension(CurrentExtension.class, new CurrentExtension(95.0));
 
@@ -61,8 +62,24 @@ class ExporterTest extends AbstractSerDeTest {
         LimitViolation violation4 = new LimitViolation("GEN2", LimitViolationType.LOW_VOLTAGE, 100, 0.7f, 115, new NodeBreakerViolationLocation("VL", Arrays.asList(0, 1)));
         violation4.addExtension(VoltageExtension.class, new VoltageExtension(400.0));
 
-        LimitViolation violation5 = new LimitViolation("NHV1_NHV2_2", LimitViolationType.ACTIVE_POWER, "20'", 1200, 100, 1.0f, 110.0, TwoSides.ONE);
-        LimitViolation violation6 = new LimitViolation("NHV1_NHV2_2", LimitViolationType.APPARENT_POWER, "20'", 1200, 100, 1.0f, 110.0, TwoSides.TWO);
+        LimitViolation violation5 = LimitViolation.builder()
+            .subject("NHV1_NHV2_2")
+            .type(LimitViolationType.ACTIVE_POWER)
+            .limitName("20'")
+            .duration(1200)
+            .limit(100)
+            .value(110)
+            .side1()
+            .build();
+        LimitViolation violation6 = LimitViolation.builder()
+            .subject("NHV1_NHV2_2")
+            .type(LimitViolationType.APPARENT_POWER)
+            .limitName("20'")
+            .duration(1200)
+            .limit(100)
+            .value(110)
+            .side2()
+            .build();
 
         Contingency contingency = Contingency.builder("contingency")
                 .addBranch("NHV1_NHV2_2", "VLNHV1")
@@ -72,7 +89,13 @@ class ExporterTest extends AbstractSerDeTest {
                 .build();
 
         LimitViolationsResult preContingencyResult = new LimitViolationsResult(Collections.singletonList(violation1));
-        PostContingencyResult postContingencyResult = new PostContingencyResult(contingency, PostContingencyComputationStatus.CONVERGED, Arrays.asList(violation2, violation3, violation4, violation5, violation6), Arrays.asList("action1", "action2"));
+        PostContingencyResult postContingencyResult = new PostContingencyResult(contingency,
+                PostContingencyComputationStatus.CONVERGED,
+                new LimitViolationsResult(Arrays.asList(violation2, violation3, violation4, violation5, violation6), Arrays.asList("action1", "action2")),
+                NetworkResult.empty(),
+                ConnectivityResult.empty(),
+                2.34
+        );
         List<BranchResult> preContingencyBranchResults = List.of(new BranchResult("branch1", 1, 2, 3, 1.1, 2.2, 3.3),
                 new BranchResult("branch2", 0, 0, 0, 0, 0, 0, 10));
         List<BusResult> preContingencyBusResults = List.of(new BusResult("voltageLevelId", "busId", 400, 3.14));
@@ -82,33 +105,48 @@ class ExporterTest extends AbstractSerDeTest {
         var opStrategyResult1 = new OperatorStrategyResult(
             new OperatorStrategy("strategyId", ContingencyContext.specificContingency("contingency1"),
                 List.of(new ConditionalActions("stage1", new AtLeastOneViolationCondition(Collections.singletonList("violationId1")), Collections.singletonList("actionId1")))),
-            PostContingencyComputationStatus.CONVERGED,
-            new LimitViolationsResult(Collections.emptyList()),
-            new NetworkResult(Collections.emptyList(), Collections.emptyList(), Collections.emptyList()));
+            List.of(new OperatorStrategyResult.ConditionalActionsResult("strategyId", PostContingencyComputationStatus.CONVERGED,
+                    new LimitViolationsResult(Collections.emptyList()),
+                    NetworkResult.empty(),
+                    3.45)
+            )
+        );
 
-        var opStrategyResult2 = new OperatorStrategyResult(
-            new OperatorStrategy("strategyId2", ContingencyContext.specificContingency("contingency1"),
+        OperatorStrategy operatorStrategy2 = new OperatorStrategy("strategyId2", ContingencyContext.specificContingency("contingency1"),
                 List.of(
-                    new ConditionalActions("stage1", new BranchThresholdCondition("Line1", AbstractThresholdCondition.Variable.CURRENT, AbstractThresholdCondition.ComparisonType.GREATER_THAN, 2.0, TwoSides.ONE), List.of("actionId3")),
-                    new ConditionalActions("stage1", new ThreeWindingsTransformerThresholdCondition("3WTransformer1", AbstractThresholdCondition.Variable.REACTIVE_POWER, AbstractThresholdCondition.ComparisonType.NOT_EQUAL, 52.0, ThreeSides.THREE), List.of("actionId3")),
-                    new ConditionalActions("stage2", new InjectionThresholdCondition("Gen2", AbstractThresholdCondition.Variable.ACTIVE_POWER, AbstractThresholdCondition.ComparisonType.GREATER_THAN_OR_EQUALS, 2.0), List.of("actionId3", "actionId4")),
-                    new ConditionalActions("stage3", new AcDcConverterThresholdCondition("Converter1", AbstractThresholdCondition.Variable.CURRENT, AbstractThresholdCondition.ComparisonType.LESS_THAN_OR_EQUALS, 3.0, true, TerminalNumber.TWO), List.of("actionId3", "actionId4", "actionId5")))),
-            PostContingencyComputationStatus.CONVERGED,
-            new LimitViolationsResult(Collections.emptyList()),
-            new NetworkResult(Collections.emptyList(), Collections.emptyList(), Collections.emptyList()));
+                        new ConditionalActions("stage1", new BranchThresholdCondition("Line1", AbstractThresholdCondition.Variable.CURRENT, AbstractThresholdCondition.ComparisonType.GREATER_THAN, 2.0, TwoSides.ONE), List.of("actionId3")),
+                        new ConditionalActions("stage1", new ThreeWindingsTransformerThresholdCondition("3WTransformer1", AbstractThresholdCondition.Variable.REACTIVE_POWER, AbstractThresholdCondition.ComparisonType.NOT_EQUAL, 52.0, ThreeSides.THREE), List.of("actionId3")),
+                        new ConditionalActions("stage2", new InjectionThresholdCondition("Gen2", AbstractThresholdCondition.Variable.ACTIVE_POWER, AbstractThresholdCondition.ComparisonType.GREATER_THAN_OR_EQUALS, 2.0), List.of("actionId3", "actionId4")),
+                        new ConditionalActions("stage3", new AcDcConverterThresholdCondition("Converter1", AbstractThresholdCondition.Variable.CURRENT, AbstractThresholdCondition.ComparisonType.LESS_THAN_OR_EQUALS, 3.0, true, TerminalNumber.TWO), List.of("actionId3", "actionId4", "actionId5"))
+                )
+        );
+        var opStrategyResult2 = new OperatorStrategyResult(operatorStrategy2,
+                List.of(new OperatorStrategyResult.ConditionalActionsResult(
+                        operatorStrategy2.getId(),
+                        PostContingencyComputationStatus.CONVERGED,
+                        new LimitViolationsResult(Collections.emptyList()), NetworkResult.empty(), Double.NaN)
+                )
+        );
 
         operatorStrategyResults.add(opStrategyResult1);
         operatorStrategyResults.add(opStrategyResult2);
-        SecurityAnalysisResult result = new SecurityAnalysisResult(preContingencyResult, LoadFlowResult.ComponentResult.Status.CONVERGED,
-                Collections.singletonList(postContingencyResult),
-                preContingencyBranchResults, preContingencyBusResults, threeWindingsTransformerResults, operatorStrategyResults);
+        SecurityAnalysisResult result = new SecurityAnalysisResult(
+                new PreContingencyResult(LoadFlowResult.ComponentResult.Status.CONVERGED, preContingencyResult, new NetworkResult(preContingencyBranchResults, preContingencyBusResults, threeWindingsTransformerResults), 1.23),
+                Collections.singletonList(postContingencyResult), operatorStrategyResults);
         result.setNetworkMetadata(new NetworkMetadata(NETWORK));
         return result;
     }
 
     @Test
     void testCompatibilityV1Deserialization() {
-        LimitViolation violation1 = new LimitViolation("NHV1_NHV2_1", LimitViolationType.CURRENT, null, Integer.MAX_VALUE, 100, 0.95f, 110.0, TwoSides.ONE);
+        LimitViolation violation1 = LimitViolation.builder()
+            .subject("NHV1_NHV2_1")
+            .type(LimitViolationType.CURRENT)
+            .limit(100)
+            .reduction(0.95f)
+            .value(110.0)
+            .side1()
+            .build();
         violation1.addExtension(ActivePowerExtension.class, new ActivePowerExtension(220.0));
         SecurityAnalysisResult result = SecurityAnalysisResultDeserializer.read(getClass().getResourceAsStream("/SecurityAnalysisResultV1.json"));
         Assertions.assertThat(result.getPreContingencyLimitViolationsResult().getLimitViolations()).hasSize(1);
@@ -150,7 +188,8 @@ class ExporterTest extends AbstractSerDeTest {
         return Stream.of(
             Arguments.of("/SecurityAnalysisResultV1.5.json"),
             Arguments.of("/SecurityAnalysisResultV1.6.json"),
-            Arguments.of("/SecurityAnalysisResultV1.7.json")
+            Arguments.of("/SecurityAnalysisResultV1.7.json"),
+            Arguments.of("/SecurityAnalysisResultV1.8.json")
         );
     }
 
